RESOLVED FIXED84455
[chromium] Don't crash when scrolling empty layer tree
https://bugs.webkit.org/show_bug.cgi?id=84455
Summary [chromium] Don't crash when scrolling empty layer tree
Sami Kyostila
Reported 2012-04-20 08:20:06 PDT
[chromium] Don't crash when scrolling empty layer tree
Attachments
Patch (3.09 KB, patch)
2012-04-20 08:22 PDT, Sami Kyostila
no flags
Patch (3.46 KB, patch)
2012-04-20 08:53 PDT, Sami Kyostila
no flags
Sami Kyostila
Comment 1 2012-04-20 08:22:36 PDT
Dana Jansens
Comment 2 2012-04-20 08:40:43 PDT
Comment on attachment 138096 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=138096&action=review > Source/WebCore/platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:245 > + if (!m_rootLayerImpl) > + return false; > + false here means something specific (we checkerboarded with an animation). i'd rather as assert in this function, and guard on m_rootLayerImpl in the calling function, like we do with prepareToDraw.
Sami Kyostila
Comment 3 2012-04-20 08:47:46 PDT
(In reply to comment #2) > (From update of attachment 138096 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=138096&action=review > > > Source/WebCore/platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:245 > > + if (!m_rootLayerImpl) > > + return false; > > + > > false here means something specific (we checkerboarded with an animation). i'd rather as assert in this function, and guard on m_rootLayerImpl in the calling function, like we do with prepareToDraw. Ah, I missed that. New patch coming up.
Sami Kyostila
Comment 4 2012-04-20 08:53:35 PDT
WebKit Review Bot
Comment 5 2012-04-20 10:53:27 PDT
Comment on attachment 138100 [details] Patch Clearing flags on attachment: 138100 Committed r114761: <http://trac.webkit.org/changeset/114761>
WebKit Review Bot
Comment 6 2012-04-20 10:53:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.