[chromium] Don't crash when scrolling empty layer tree https://bugs.webkit.org/show_bug.cgi?id=84455

Patch by Sami Kyostila <skyostil@chromium.org> on 2012-04-20
Reviewed by James Robinson.

Source/WebCore:

Do not try to calculate render passes when there are no layers in the
layer tree.

Added new unit test.

* platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
(WebCore::CCLayerTreeHostImpl::calculateRenderPasses):

Source/WebKit/chromium:

Try to scroll an empty layer tree.

* tests/CCLayerTreeHostImplTest.cpp:
(WebKitTests::TEST_F):
(WebKitTests):

Canonical link: https://commits.webkit.org/101956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114761 268f45cc-cd09-0410-ab3c-d52691b4dbfc